--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,6 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
+.DS_Store
+# [Aa]ssets/.DS_Store
+# [Aa]ssets/Background.DS_Store
